js/src/xpconnect/src/xpcwrappednativeproto.cpp
@@ -93,7 +93,10 @@ XPCWrappedNativeProto::Init(
                 JSBool isGlobal,
                 const XPCNativeScriptableCreateInfo* scriptableCreateInfo)
 {
-    if(scriptableCreateInfo && scriptableCreateInfo->GetCallback())
+    nsIXPCScriptable *callback = scriptableCreateInfo ?
+                                 scriptableCreateInfo->GetCallback() :
+                                 nsnull;
+    if(callback)
     {
         mScriptableInfo =
             XPCNativeScriptableInfo::Construct(ccx, isGlobal, scriptableCreateInfo);
@@ -135,19 +138,15 @@ XPCWrappedNativeProto::Init(
 
     JSBool ok = mJSProtoObject && JS_SetPrivate(ccx, mJSProtoObject, this);
 
-    if(ok && scriptableCreateInfo)
+    if(ok && callback)
     {
-        nsIXPCScriptable *callback = scriptableCreateInfo->GetCallback();
-        if(callback)
+        nsresult rv = callback->PostCreatePrototype(ccx, mJSProtoObject);
+        if(NS_FAILED(rv))
         {
-            nsresult rv = callback->PostCreatePrototype(ccx, mJSProtoObject);
-            if(NS_FAILED(rv))
-            {
-                JS_SetPrivate(ccx, mJSProtoObject, nsnull);
-                mJSProtoObject = nsnull;
-                XPCThrower::Throw(rv, ccx);
-                return JS_FALSE;
-            }
+            JS_SetPrivate(ccx, mJSProtoObject, nsnull);
+            mJSProtoObject = nsnull;
+            XPCThrower::Throw(rv, ccx);
+            return JS_FALSE;
         }
     }
 
